# AquariumSimulator

./: README.md
Affichage/: #Window.java#  Affichage.cfg  Client.java  Connexion.java  Fenetre.java  Fish.java  Input.java  InputRaffin.java  Juhnytg.java  Panel.java  Panneau.java  Parser.java  Point.java  README  ReadAndSendConsoleOutput.java  ReadCfg.java  ReadInput.java  ReadServerMessages.java  ReadUserMessages.java  RunImpl.java  RunImpl.java~  SendPing.java  Server.java  Server.java~  SocketPing.java  TestAffichage.java  TestParseur.java  TestParseur.java~  Window.java
Controleur/: CMakeLists.txt  controller.ini
Controleur/data/: default.dot
Controleur/src/: config.c  config.c~  config.h  fish.c  fish.h  graph.c  graph.h  ini_parser.c  ini_parser.c~  ini_parser.h  interface.c  interface.h  main.c  network.c  network.h  poisson.c  poisson.h  utils.c  utils.h
